--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "expo": "~48.0.6",
     "expo-font": "~11.1.1",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.3",
+    "react-native-safe-area-context": "4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
