--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "expo-font": "~11.1.1",
     "react": "18.2.0",
     "react-native": "0.71.3",
-    "react-native-safe-area-context": "4.5.0"
+    "react-native-safe-area-context": "4.5.0",
+    "expo-clipboard": "~4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
