--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   "dependencies": {
     "@expo-google-fonts/noto-sans": "^0.2.3",
     "expo": "~48.0.6",
+    "expo-clipboard": "~4.1.2",
     "expo-font": "~11.1.1",
     "react": "18.2.0",
     "react-native": "0.71.3",
-    "react-native-safe-area-context": "4.5.0",
-    "expo-clipboard": "~4.1.2"
+    "react-native-safe-area-context": "4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "babel-plugin-inline-dotenv": "^1.7.0",
+    "dotenv": "^16.0.3",
     "typescript": "^4.9.4"
   },
   "private": true
