--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "expo-font": "~11.1.1",
     "react": "18.2.0",
     "react-native": "0.71.3",
-    "react-native-safe-area-context": "4.5.0"
+    "react-native-hold-menu": "^0.1.5",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-gesture-handler": "~2.9.0",
+    "expo-blur": "~12.2.2",
+    "expo-haptics": "~12.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
